add build script & cypress

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "next",
     "test": "jest",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
+    "cypress": "cypress open",
     "build-storybook": "build-storybook"
   },
   "author": "Michael Nease",
@@ -29,6 +30,7 @@
     "babel-jest": "24.1.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
+    "cypress": "^3.2.0",
     "enzyme": "^3.9.0",
     "jest": "24.1.0",
     "jest-styled-components": "^6.3.1",
