--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "cypress": "^3.2.0",
     "enzyme": "^3.9.0",
+    "eslint-plugin-cypress": "^2.2.1",
     "jest": "24.1.0",
     "jest-styled-components": "^6.3.1",
     "react-testing-library": "^5.4.2"
