--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "test": "jest",
-    "build": "next build && next export",
+    "build": "next build && next export -o ../server/dis",
+    "help": "next export -h",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "cypress": "cypress open",
