--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next",
     "test": "jest",
+    "e2e": "jest && cypress open",
     "build": "next build && next export -o ../server/static/",
     "help": "next export -h",
     "start": "next start",
