--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "forever ./bin/www",
+    "dev": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -11,9 +12,14 @@
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
+    "forever": "^1.0.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.1.1",
     "pug": "2.0.0-beta11"
+  },
+  "engines": {
+    "node": "11.14.0",
+    "npm": "6.7.0"
   }
 }
