--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "heroku-prebuild": "npm install --prefix ./client && npm run build --prefix ./client",
-    "heroku-postbuild": "npm install --prefix ./server && npm start --prefix ./server"
+    "heroku-postbuild": "npm install --prefix ./server"
   },
   "engines": {
     "node": "11.14.0",
