--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.1.1",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.3"
   },
   "engines": {
     "node": "11.14.0",
