--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "babel-jest": "24.1.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
+    "braces": ">=2.3.1",
     "cypress": "^3.2.0",
     "enzyme": "^3.9.0",
     "eslint-plugin-cypress": "^2.2.1",
